feat(backend): added Auth APIS
