# src/core/interfaces/controllers/auth.con.ts
@@ -1,9 +1,10 @@
 import { envConfig } from "@/config";
 import { TryCatchBlock } from "@/core/app/base/trycatchblock";
+import { User } from "@/core/app/dto/api.dto";
 import { AuthService } from "@/core/app/services";
 import { Request, Response } from "express";
 
-const { googleAuth, login, logout, refreshToken, register } = AuthService;
+const { login, refreshToken, register } = AuthService;
 
 export const AuthController = {
   refresh: TryCatchBlock(async (req: Request, res: Response) => {
@@ -14,8 +15,59 @@ export const AuthController = {
       data: { accessToken },
     });
   }),
-  signin: TryCatchBlock(async (req: Request, res: Response) => {}),
-  signup: TryCatchBlock(async (req: Request, res: Response) => {}),
+  signin: TryCatchBlock(async (req: Request, res: Response) => {
+    const { email, password, recall } = req.body as {
+      email: string;
+      password: string;
+      recall?: boolean;
+    };
+
+    const { user, refreshToken, accessToken } = await login({
+      password,
+      email,
+      recall,
+    });
+
+    res.cookie("refreshToken", refreshToken, {
+      httpOnly: true,
+      secure: true,
+      sameSite: "strict",
+      path: "/",
+      expires: new Date(Date.now() + 30 * 24 * 60 * 60 * 1000),
+    });
+
+    res.status(200).json({
+      message: "User signed in successfully",
+      data: { ...user, accessToken },
+    });
+  }),
+  signup: TryCatchBlock(async (req: Request, res: Response) => {
+    const { email, password, name, recall } = req.body as {
+      email: string;
+      password: string;
+      name: string;
+      recall: boolean;
+    };
+    const { user, refreshToken, accessToken } = await register({
+      email,
+      password,
+      name,
+      recall,
+    });
+
+    res.cookie("refreshToken", refreshToken, {
+      httpOnly: true,
+      secure: true,
+      sameSite: "strict",
+      path: "/",
+      expires: new Date(Date.now() + 30 * 24 * 60 * 60 * 1000),
+    });
+
+    res.status(201).json({
+      message: "User signed up successfully",
+      data: { ...user, accessToken },
+    });
+  }),
   signout: TryCatchBlock(async (_req: Request, res: Response) => {
     const refreshName = envConfig.refreshName;
     res.clearCookie(refreshName, {
@@ -27,5 +79,24 @@ export const AuthController = {
 
     res.status(200).json({ message: "User signed out successfully" });
   }),
-  google: TryCatchBlock(async (req: Request, res: Response) => {}),
+  googleAuth: TryCatchBlock(async (req: Request, res: Response) => {
+    if (req.user) {
+      const { accessToken, refreshToken } = req.user as {
+        accessToken: string;
+        refreshToken: string;
+        user: User;
+      };
+
+      res.cookie(envConfig.refreshName, refreshToken, {
+        httpOnly: true,
+        secure: true,
+        sameSite: "strict",
+        path: "/",
+        expires: new Date(Date.now() + 30 * 24 * 60 * 60 * 1000),
+      });
+      res.redirect(
+        `${envConfig.googleJavascriptOrigins}/?token=${accessToken}`
+      );
+    }
+  }),
 };
